# django-choices-field

./: .coveragerc  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: cicd.yml
django_choices_field/: __init__.py  fields.py  fields.pyi  types.py
tests/: models.py  settings.py  test_fields.py
tests/typecheckers/: test_fields.py
tests/typecheckers/utils/: __init__.py  mypy.py  pyright.py  ty.py
