[tool.poetry]
name = "django-choices-field"
version = "4.0.0"
description = "Django field that set/get django's new TextChoices/IntegerChoices enum."
authors = ["Thiago Bellini Ribeiro <thiago@bellini.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bellini666/django-choices-field"
repository = "https://github.com/bellini666/django-choices-field"
documentation = "https://django-choices-field.readthedocs.io"
keywords = ["django", "enum"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
]
packages = [{ include = "django_choices_field" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = ">=4.2"
typing_extensions = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
codecov = "^2.1.11"
django = "^4.2"
django-types = "^0.22.0"
inline-snapshot = "^0.31.1"
mypy = "^1.16.0"
pyright = "^1.1.400"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-django = "^4.2.0"
ruff = "^0.14.0"
ty = "^0.0.7"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
extend-select = [
    "A",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "COM",
    "D",
    "D2",
    "D3",
    "D4",
    "DTZ",
    "E",
    "ERA",
    "EXE",
    "F",
    "FURB",
    "G",
    "I",
    "ICN001",
    "INP",
    "ISC",
    "N",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "T20",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
extend-ignore = [
    "D100",
    "D102",
    "D104",
    "D105",
    "D107",
    "TRY003",
    # ruff formatter recommends to disable those
    "COM812",
    "COM819",
    "D206",
    "E111",
    "E114",
    "E117",
    "E501",
    "ISC001",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
]
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "__pycached__",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["A003", "PLW0603", "PLR2004", "D", "PGH003", "SLF001"]
"examples/*" = ["A003"]
"**/migrations/*" = ["RUF012"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]

[tool.ruff.format]

[tool.pyright]
pythonVersion = "3.10"
useLibraryCodeForTypes = true
ignore = ["**/migrations", "tests"]
reportCallInDefaultInitializer = "warning"
reportMatchNotExhaustive = "warning"
reportMissingSuperCall = "warning"
reportOverlappingOverload = "warning"
reportUninitializedInstanceVariable = "none"
reportUnnecessaryCast = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUntypedNamedTuple = "error"
reportUnusedExpression = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportIncompatibleVariableOverride = "none"
reportIncompatibleMethodOverride = "none"
strictDictionaryInference = true
strictListInference = true
strictSetInference = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = "test_*.py"
testpaths = ["tests"]
addopts = "--cov=./ -vv"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
